--- a/siriusrpc-demo-consumer/src/main/resources/application.yaml
+++ b/siriusrpc-demo-consumer/src/main/resources/application.yaml
@@ -2,6 +2,8 @@ server:
   port: 8088
 siriusrpc:
   providers: http://localhost:8081,http://localhost:8082
+  zkServer: localhost:2182
+  zkRoot: siriusrpc
 
 app:
   id: app1
