6th: fix bugs: toList

--- a/siriusrpc-demo-provider/src/main/resources/application.yml
+++ b/siriusrpc-demo-provider/src/main/resources/application.yml
@@ -6,6 +6,6 @@ app:
   namespace: public
   env: dev
 
-sirriusrpc:
-  zkServer: localhost:2182
+siriusrpc:
+  zkServer: localhost:2181
   zkRoot: siriusrpc
