7th: refactor log

--- a/siriusrpc-demo-provider/src/main/resources/application.yml
+++ b/siriusrpc-demo-provider/src/main/resources/application.yml
@@ -9,3 +9,8 @@ app:
 siriusrpc:
   zkServer: localhost:2181
   zkRoot: siriusrpc
+
+logging:
+  level:
+    root: info
+    org.galaxy.siriusrpc: info
