--- a/siriusrpc-core/pom.xml
+++ b/siriusrpc-core/pom.xml
@@ -6,17 +6,13 @@
     <parent>
         <groupId>org.galaxy</groupId>
         <artifactId>siriusrpc</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>siriusrpc-core</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>siriusrpc-core</name>
     <packaging>jar</packaging>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <dependencies>
         <dependency>
