--- a/siriusrpc-demo-api/pom.xml
+++ b/siriusrpc-demo-api/pom.xml
@@ -6,9 +6,11 @@
     <parent>
         <groupId>org.galaxy</groupId>
         <artifactId>siriusrpc</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>siriusrpc-demo-api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>siriusrpc-demo-api</name>
 
 </project>
